syntax = "proto3";

package api.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

service APIService {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
  rpc GetEvents(GetEventsRequest) returns (GetEventsResponse);
  rpc GetEvent(GetEventRequest) returns (GetEventResponse);

  rpc SendComment(SendCommentRequest) returns (SendCommentResponse);
  rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse);

  rpc ConnectToStream(ConnectToStreamRequest) returns (stream ConnectToStreamResponse);
}

message CreateEventRequest {
  string title = 1 [(buf.validate.field).string.min_len = 1];
  google.protobuf.Timestamp start_at = 2;
  google.protobuf.Timestamp end_at = 3;
}

message CreateEventResponse {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetEventsRequest {}

message GetEventsResponse {
  repeated Event events = 1;
}

message GetEventRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetEventResponse {
  Event event = 1;
}

message SendCommentRequest {
  string text = 1 [(buf.validate.field).string.min_len = 1];
  string user_id = 2 [(buf.validate.field).string.min_len = 1];
  string event_id = 3 [(buf.validate.field).string.uuid = true];
}

message SendCommentResponse {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetCommentsRequest {
  string event_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetCommentsResponse {
  repeated Comment comments = 1;
}

message ConnectToStreamRequest {
  string event_id = 1 [(buf.validate.field).string.uuid = true];
}

message ConnectToStreamResponse {
  oneof event_or_comment {
    Event event = 1;
    Comment comment = 2;
  }
}

message Event {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string title = 2 [(buf.validate.field).string.min_len = 1];
  google.protobuf.Timestamp start_at = 3;
  google.protobuf.Timestamp end_at = 4;
}

message Comment {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string user_id = 2 [(buf.validate.field).string.min_len = 1];
  string event_id = 3 [(buf.validate.field).string.uuid = true];
  string text = 4 [(buf.validate.field).string.min_len = 1];
  google.protobuf.Timestamp created_at = 5;
}
